--- a/shopping_cart/templates/pages/user.html
+++ b/shopping_cart/templates/pages/user.html
@@ -3,7 +3,7 @@
 {% block header %}<h2>My Profile</h2>{% endblock %}
 
 {% block content %}
-<div class="user-content">
+<div class="user-content" style="max-width: 500px;">
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li class="active"><i class="icon-user icon-fixed-width"></i> My Profile</li>
